--- a/sofa-jobs/sofa-jobs-agent-bootstrap/pom.xml
+++ b/sofa-jobs/sofa-jobs-agent-bootstrap/pom.xml
@@ -26,14 +26,11 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-exec -->
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-exec</artifactId>
             <version>1.3</version>
         </dependency>
-
-        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-compress -->
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-compress</artifactId>
@@ -54,36 +51,32 @@
               <artifactId>ojdbc14</artifactId>
               <version>10.2.0.3.0</version>
           </dependency>-->
-        <!-- https://mvnrepository.com/artifact/com.oracle.ojdbc/ojdbc8 -->
         <dependency>
             <groupId>com.oracle.ojdbc</groupId>
             <artifactId>ojdbc8</artifactId>
             <version>19.3.0.0</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/com.oracle.ojdbc/orai18n -->
         <dependency>
             <groupId>com.oracle.ojdbc</groupId>
             <artifactId>orai18n</artifactId>
             <version>19.3.0.0</version>
         </dependency>
-
         <dependency>
             <groupId>org.mongodb</groupId>
             <artifactId>mongodb-driver</artifactId>
             <version>3.8.2</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/com.gmongo/gmongo -->
         <dependency>
             <groupId>com.gmongo</groupId>
             <artifactId>gmongo</artifactId>
             <version>1.5</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/com.jcraft/jsch -->
         <dependency>
             <groupId>com.jcraft</groupId>
             <artifactId>jsch</artifactId>
             <version>0.1.29</version>
         </dependency>
+
 
 
         <!-- 引入依赖在这里 -->
@@ -124,6 +117,35 @@
         </dependency>
 
     </dependencies>
+
+    <profiles>
+        <profile>
+            <id>nuis</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>com.chinaums</groupId>
+                    <artifactId>ums-sm4util-jdk1.8-x64</artifactId>
+                    <version>1.0.5</version>
+                </dependency>
+            </dependencies>
+            <repositories>
+                <repository>
+                    <id>main</id>
+                    <url>http://172.30.252.132:8081/nexus/content/groups/security/</url>
+                    <releases>
+                        <enabled>true</enabled>
+                    </releases>
+                    <snapshots>
+                        <enabled>true</enabled>
+                        <updatePolicy>always</updatePolicy>
+                    </snapshots>
+                </repository>
+            </repositories>
+        </profile>
+    </profiles>
 
     <build>
         <plugins>
