--- a/sofa-admin/sofa-admin-job/pom.xml
+++ b/sofa-admin/sofa-admin-job/pom.xml
@@ -34,10 +34,12 @@
         <dependency>
             <groupId>me.izhong.sofa</groupId>
             <artifactId>sofa-admin-common</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>me.izhong.sofa</groupId>
             <artifactId>sofa-admin-framework</artifactId>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 </project>
