--- a/sofa-jobs/sofa-jobs-agent-bootstrap/pom.xml
+++ b/sofa-jobs/sofa-jobs-agent-bootstrap/pom.xml
@@ -76,7 +76,21 @@
             <artifactId>jsch</artifactId>
             <version>0.1.29</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk15on</artifactId>
+            <version>1.64</version>
+        </dependency>
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcmail-jdk15on</artifactId>
+            <version>1.64</version>
+        </dependency>
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcpg-jdk15on</artifactId>
+            <version>1.64</version>
+        </dependency>
 
 
         <!-- 引入依赖在这里 -->
