--- a/sofa-jobs/sofa-jobs-bootstrap/src/main/resources/application.yml
+++ b/sofa-jobs/sofa-jobs-bootstrap/src/main/resources/application.yml
@@ -29,7 +29,7 @@ com:
     sofa:
       rpc:
         registry:
-          address: zookeeper://144.131.254.141:2181
+          address: zookeeper://xxx:2181
         bolt-port: 13302
 ---
 spring:
